[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npfl139"
version = "2425.0.0.a0"
authors = [
  { name="Milan Straka", email="straka@ufal.mff.cuni.cz" },
]
description = "Modules used by the Deep Reinforcement Learning Course NPFL139"
readme = "npfl139/README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
]
license = { text="MPL-2.0" }

[project.urls]
Homepage = "https://ufal.mff.cuni.cz/courses/npfl139"
Repository = "https://github.com/ufal/npfl139"

[tool.setuptools]
license-files = [ "npfl139/LICENSE" ]
